[package]
name = "arty"
version = "0.1.2"
authors = ["Gavin Rossiter <rossiter.gavin@gmail.com>"]
edition = "2018"
description = "Command line based browser and artifact downloader for jenkins!"
keywords = ["jenkins", "artifact", "cli"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/krooq/arty"
readme = "README.md"

[dependencies]
structopt = "0.3.14"
jenkins_api = "0.8.0"
serde = "1.0.110"
regex = "1.3.7"
anyhow = "1.0.31"
prettytable-rs = "^0.8"
reqwest = "0.10.4"